--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -40,12 +40,15 @@ jobs:
       contents: read
       security-events: write
       actions: read
+    continue-on-error: true  # Allow the workflow to continue even if this job fails
     
     steps:
       - uses: actions/checkout@v4
 
       - name: Run Synthetic Monitoring
+        id: synthetic
         uses: ./.github/actions/synthetic-monitoring
+        continue-on-error: true # Allow the step to fail but still run the remaining workflow
         with:
           test_url: ${{ env.TEST_URL }}
           aws_access_key_id: ${{ env.AWS_ACCESS_KEY_ID }}
@@ -55,9 +58,13 @@ jobs:
           prometheus_pushgateway: ${{ env.PROMETHEUS_PUSHGATEWAY }}
           browser: ${{ inputs.browser || 'chromium' }}
           env_vars: ${{ inputs.env_vars }}
+          
+      - name: Report Status
+        if: steps.synthetic.outcome != 'success'
+        run: echo "::warning::Synthetic monitoring tests failed, but workflow will continue"
 
   zap-scan:
-    needs: synthetic-tests
+    # Removed the dependency on synthetic-tests
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -96,10 +103,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Process ZAP Reports
+      - name: Process ZAP Reports and Send to Prometheus
         env:
           AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ env.AWS_REGION }}
           S3_BUCKET: ${{ env.S3_BUCKET }}
+          PROMETHEUS_PUSHGATEWAY: ${{ env.PROMETHEUS_PUSHGATEWAY }}
         run: npx ts-node scripts/process-zap-reports.ts
