--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -64,7 +64,7 @@ jobs:
         run: echo "::warning::Synthetic monitoring tests failed, but workflow will continue"
 
   zap-scan:
-    # Removed the dependency on synthetic-tests
+    # Runs independently from synthetic-tests
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -101,8 +101,8 @@ jobs:
           node-version: '20'
           
       - name: Install dependencies
-        # Using npm install instead of npm ci to install dependencies without requiring a package-lock.json file
-        run: npm install
+        # Now using npm ci since we have a proper package-lock.json file
+        run: npm ci
         
       - name: Process ZAP Reports and Send to Prometheus
         env:
